apps/backend/tests/unit/snapshots/unit_tests__unit__recall_insights_snapshot__difficulty-breakdown-item-easy.snap
---
source: apps/backend/tests/unit/recall_insights_snapshot.rs
expression: value
---
{
  "accuracy": 92.5,
  "count": 4,
  "difficulty": "Easy"
}
