apps/backend/tests/unit/snapshots/unit_tests__unit__recall_insights_snapshot__free-recall-empty.snap
---
source: apps/backend/tests/unit/recall_insights_snapshot.rs
expression: value
---
{
  "ai_clarity_score": 0.0,
  "average_response_length": 0,
  "missing_concepts": [],
  "participation_rate": 0.0
}
