apps/backend/tests/unit/snapshots/unit_tests__unit__recall_insights_snapshot__mcq-recall-empty.snap
---
source: apps/backend/tests/unit/recall_insights_snapshot.rs
expression: value
---
{
  "difficulty_breakdown": [],
  "overall_accuracy": 0.0,
  "questions": [],
  "total_questions_attempted": 0
}
