apps/backend/tests/unit/snapshots/unit_tests__unit__recall_insights_snapshot__memory-gap-item-forgotten.snap
---
source: apps/backend/tests/unit/recall_insights_snapshot.rs
expression: value
---
{
  "concept": "Planar Symmetry",
  "confidence": 25.0,
  "correctness": 15.0,
  "mismatch_alert": null,
  "recall_status": "forgotten"
}
