apps/backend/tests/unit/snapshots/unit_tests__unit__recall_insights_snapshot__memory-gap-item-without-alert.snap
---
source: apps/backend/tests/unit/recall_insights_snapshot.rs
expression: value
---
{
  "concept": "Gauss's Law Statement",
  "confidence": 72.0,
  "correctness": 90.0,
  "mismatch_alert": null,
  "recall_status": "remembered"
}
