apps/backend/tests/unit/snapshots/unit_tests__unit__recall_insights_snapshot__memory-gap-map-empty.snap
---
source: apps/backend/tests/unit/recall_insights_snapshot.rs
expression: value
---
{
  "items": []
}
